Maven için yönergeler eklendi 🗽